force-app/main/default/objects/SalesTeam__c/SalesTeam__c.object-meta.xml
<CustomObject>
    <label>SalesTeam</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>SalesTeam Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SalesTeams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>