force-app/main/default/objects/SalesTeam__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract</label>
    <length>25</length>
    <type>Text</type>
</CustomField>