force-app/main/default/objects/SalesTeam__c/fields/FRName__c.field-meta.xml
<CustomField>
    <fullName>FRName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FRName</label>
    <length>20</length>
    <type>Text</type>
</CustomField>