force-app/main/default/objects/SalesTeam__c/fields/Responsibilities__c.field-meta.xml
<CustomField>
    <fullName>Responsibilities__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Responsibilities</label>
    <length>30</length>
    <type>Text</type>
</CustomField>